@@ -1,4 +1,6 @@
 ver 0.20.22 (not yet released)
+* storage
+  - curl: URL-encode paths
 
 ver 0.20.21 (2018/08/17)
 * database
